# rust-crate-version-checker

./: Cargo.toml  LICENSE  README.md
package/install-app/: Cargo.toml
package/install-app/src/: main.rs
package/uninstall-app/: Cargo.toml
package/uninstall-app/src/: main.rs
src/: main.rs
