[package]
name = "rust-crate-version-checker"
version = "0.1.0"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 2
panic = "unwind"
overflow-checks = true
lto = false

[profile.release]
lto = true
opt-level = 3
debug = 0
panic = "abort"
overflow-checks = false

[dependencies]
#clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
urlencoding = "2.1.3"